resources/assets/js/components/main-navbar/main-navbar.scss
@import "../../../sass/variables";
@import "../../../sass/mixins";

.nav {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    z-index: 99999;
    background: rgba($primary-color, 0.4);
    margin: 0;
    padding: 0;

    @include e('logo') {
        position: relative;
        width: 270px;

        &:hover {
            .nav__logo__text {
                transition: $transition;
                opacity: 1;
                transform: translateX(0);
            }
        }

        @include e('img') {
            top: -2px;
            width: 35px;
            transition: $transition;
            position: relative;
        }

        @include e('text') {
            vertical-align: sub;
            text-transform: uppercase;
            color: #fff !important;
            text-decoration: none !important;
            font-size: 1rem;
            letter-spacing: 5px;
            position: absolute;
            top: 0px;
            left: 50px;
            transition: $transition;
            width: 250px;
        }
    }

    @include e('items') {
        list-style: none;
        margin: 0 0 0 auto;
        padding: 0;
        display: flex;
    }

    @include e('item') {
        transition: $transition;
        position: relative;

        @include m('active') {
            &:after {
                content: '';
                position: absolute;
                background: #fff;
                height: 3px;
                bottom: 0;
                left: 0;
                right: 0;
            }
        }
    }

    @include e('link') {
        color: #fff;
        padding: 1.6rem 1rem;
        display: inline-block;
        font-size: .9rem;
        font-weight: 100;
        letter-spacing: 2px;
        text-transform: uppercase;
        transition: $transition;

        &:focus {
            color: #fff !important;
            text-decoration: none !important;
        }

        &:hover {
            text-decoration: none;
            color: #fff;
            .nav__link__subtext {
                color: $secondary-color !important;
            }
        }

        @include e('subtext') {
            color: rgba(255, 255, 255, .6);
            display: block;
            font-size: 9px;
            text-transform: lowercase;
            transition: $transition;
        }
    }

    @include e('container') {
        display: flex;
        align-items: center;
        justify-content: space-between;
        margin: 0 auto;
    }

    @include m('scroll') {
        background: rgba($primary-color, 0.94);

        .nav__logo__text {
            transform: translateX(3rem);
            opacity: 0;
        }

        .nav__item {
            .nav__link {
                padding: .9rem 1rem;
                &:hover {
                    color: $secondary-color;
                }
            }

            .nav__link__subtext {
                opacity: 0;
                height: 0px;
                width: 0px;
            }
        }
    }

    @include m('mobile') {
        background: transparent;
        opacity: 0;
        transition: $transition;
        
        .nav__container {
            transition: $transition;
            transform: translateY(-7rem);
            opacity: 0;
            background: rgba($primary-color, 0.94);
            max-width: none;
        }

        .nav__items {
            padding-top: 2rem;
            flex-direction: column;
        }

        .nav__item {
            .nav__link {
                padding: .9rem 1rem;

                &:hover {
                    color: $secondary-color;
                }
            }
        }

        @include m('active') {
            opacity: 1;

            .nav__container {
                transform: translateY(0);
                opacity: 1;
            }

        }

        .nav__logo {
            position: fixed;
            top: 38px;
            left: 34px;
        }

        .nav__items {
            padding-top: 4rem;
            text-align: right;
        }

        .nav--scroll {
            background: none !important;
        }

        .nav__link__subtext {
            display: none;
        }

        .nav__item--active:after {
            display: none;
        }
    }
}

@media (max-width: 1024px) {
    .nav__logo__text {
        display: none !important;
    }
}


.mobile-toggle {
    position: fixed;
    top: 30px;
    right: 33px;
    font-size: 2rem;
    color: #fff;
    z-index: 9999999;
    text-decoration: none !important;

    &:focus {
        color: #fff !important;
    }

    &:hover {
        color: #fff !important;
    }
}

